# proteus-visual-language

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-ASSETS.md  README.md  SETUP.md
.github/workflows/: pages.yml  release.yml  tokens.yml
community/: README.md  community-kit.html
docs/: README.md  applications.md  color.md  figure-conventions.md  index.md  logo.md  module-colors.md  motifs.md  typography.md
figures/proteus-mpl/: README.md  pyproject.toml
figures/proteus-mpl/examples/: cycle.py
figures/proteus-mpl/src/proteus_mpl/: __init__.py  proteus.mplstyle  proteus_dark.mplstyle
fonts/: README.md  fonts.css
logo/: README.md
site/: README.md  index.html  logo-lockups.html
talks/beamer/: README.md  beamerthemeproteus.sty
templates/: README.md
templates/deck/: deck-stage.js  deck-templates.html  image-slot.js
templates/docs/: docs.css  docs.js  extra.css
templates/poster/: poster-a0.html
templates/web/: site.css  theme.js
tokens/: README.md  check_copies.py  check_sync.py  check_versions.py  package.json  tokens.css  tokens.json  tokens.scss
